final commit assignment 1, ses 1

--- a/cds-lang-assignment-1/src/assignment1.ipynb
+++ b/cds-lang-assignment-1/src/assignment1.ipynb
@@ -18,9 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_37397/3521877281.py:3: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "import os \n",
@@ -31,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +86,12 @@
     "            \n",
     "            len = len(doc) #get total token count\n",
     "\n",
-    "            for token in doc:\n",
-    "\n"
+    "            for token in doc:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +120,13 @@
     "    if token.pos_ == \"ADV\":\n",
     "        adv_count +=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -158,15 +179,6 @@
    ],
    "source": [
     "list=[\"Na\", (rel_freq(noun_count, len)), rel_freq(verb_count, len), rel_freq(adj_count, len), rel_freq(adv_count, len), \"Na\", \"Na\", \"Na\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#function for calculating the relative frequency (per 10000 words)\n"
    ]
   },
   {
