commit final version assignment 1, with correct location tag

--- a/cds-lang-assignment-1/src/assignment1.ipynb
+++ b/cds-lang-assignment-1/src/assignment1.ipynb
@@ -4,16 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting linguistic features using spaCy\n",
-    "Assignment 1, Language analytics, CDS 2024\n",
-    "Laura Givskov Rahbek "
+    "# Assignment 1: Extracting linguistic features using spaCy\n",
+    "Language analytics, CDS 2024, Laura Givskov Rahbek \n",
+    "\n",
+    "*This assignment is designed to test that you can:*\n",
+    "\n",
+    "1. Work with multiple input data arranged hierarchically in folders;\n",
+    "2. Use ```spaCy``` to extract linguistic information from text data;\n",
+    "3. Save those results in a clear way which can be shared or used for future analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set up and import packacges "
+    "### Set up and import packacges "
    ]
   },
   {
@@ -35,7 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nlp = spacy.load(\"en_core_web_md\")\n",
     "import en_core_web_sm\n",
     "nlp = en_core_web_sm.load()"
    ]
@@ -44,14 +48,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define functions"
+    "### Define functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Relative frequency of word type in a text"
+    "#### Relative frequency of word type in a text"
    ]
   },
   {
@@ -60,7 +64,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rel_freq(count, len_doc):\n",
+    "def rel_freq(count, len_doc): \n",
+    "    \"\"\"\n",
+    "    input is the number of times a given POS occurs in a text, \n",
+    "    and the total number of tokens in the text. \n",
+    "    Output is the relative frquency per 10,000 words, rounded to two decimals\n",
+    "    \"\"\"\n",
     "    return round((count/len_doc * 10000), 2)"
    ]
   },
@@ -68,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Retreiving number of unique persons, locations and organisations in a text"
+    "#### Retreiving number of unique persons, locations and organisations in a text"
    ]
   },
   {
@@ -78,19 +87,24 @@
    "outputs": [],
    "source": [
     "def unique_NE(doc):\n",
+    "    \"\"\" \n",
+    "    Input is a doc object. Output is the number of unique persons, locations and\n",
+    "    organisations mentioned in the doc object. \n",
+    "    \"\"\"\n",
     "    enteties = []\n",
     "    for e in doc.ents: \n",
     "        enteties.append((e.text, e.label_))\n",
+    "\n",
     "    ents_pd = pd.DataFrame(enteties, columns=[\"ent\", \"label\"])\n",
     "    ents_pd = ents_pd.drop_duplicates()\n",
     "    unique_counts = ents_pd.value_counts(subset = \"label\")\n",
     "    \n",
-    "    unique_labels = ['PERSON', 'GPE', 'ORG']\n",
+    "    unique_labels = ['PERSON', 'LOC', 'ORG']\n",
     "    unique_row = []\n",
     "    for label in unique_labels:\n",
     "        if label in (unique_counts.index):\n",
     "            unique_row.append(unique_counts[label])\n",
-    "        else: b\n",
+    "        else:\n",
     "            unique_row.append(0)\n",
     "\n",
     "    return unique_row"
@@ -100,12 +114,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extract linguistic features for each text"
+    "### Extract linguistic features for each text\n",
+    "A .csv file, with a row for each text, for each subfolder in the USEcorpus is saved to 'out'. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +129,8 @@
     "for subfolder in sorted(os.listdir(filepath)):\n",
     "    subfolder_path = os.path.join(filepath, subfolder)\n",
     "    \n",
-    "    out_df = pd.DataFrame(columns=(\"Filename\",\"RelFreq NOUN\",\"RelFreq VERB\",\"RelFreq ADJ\",\"RelFreq ADV\",\"Unique PER\",\"Unique LOC\",\"Unique ORG\"))\n",
+    "    out_df = pd.DataFrame(columns=(\"Filename\", \"RelFreq NOUN\",\"RelFreq VERB\",\"RelFreq ADJ\",\n",
+    "    \"RelFreq ADV\",\"Unique PER\",\"Unique LOC\",\"Unique ORG\"))\n",
     "\n",
     "    outpath = os.path.join(\"..\", \"out\", f\"{subfolder}.csv\")\n",
     "\n",
@@ -141,7 +157,8 @@
     "                if token.pos_ == \"ADV\":\n",
     "                    adv_count +=1\n",
     "            \n",
-    "            noun_rel, verb_rel, adj_rel, adv_rel = rel_freq(noun_count, len_doc), rel_freq(verb_count, len_doc), rel_freq(adj_count, len_doc), rel_freq(adv_count, len_doc)\n",
+    "            noun_rel, verb_rel, adj_rel, adv_rel = rel_freq(noun_count, len_doc), \n",
+    "            rel_freq(verb_count, len_doc), rel_freq(adj_count, len_doc), rel_freq(adv_count, len_doc)\n",
     "            \n",
     "            per, loc, org = unique_NE(doc)\n",
     "    \n",
