commit nb and output where the nlp model is the correct one(md)

--- a/cds-lang-assignment-1/src/assignment1.ipynb
+++ b/cds-lang-assignment-1/src/assignment1.ipynb
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import en_core_web_sm\n",
-    "nlp = en_core_web_sm.load()"
+    "import en_core_web_md\n",
+    "nlp = en_core_web_md.load()"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +157,7 @@
     "                if token.pos_ == \"ADV\":\n",
     "                    adv_count +=1\n",
     "            \n",
-    "            noun_rel, verb_rel, adj_rel, adv_rel = rel_freq(noun_count, len_doc), \n",
-    "            rel_freq(verb_count, len_doc), rel_freq(adj_count, len_doc), rel_freq(adv_count, len_doc)\n",
+    "            noun_rel, verb_rel, adj_rel, adv_rel = rel_freq(noun_count, len_doc), rel_freq(verb_count, len_doc), rel_freq(adj_count, len_doc), rel_freq(adv_count, len_doc)\n",
     "            \n",
     "            per, loc, org = unique_NE(doc)\n",
     "    \n",
