--- a/assignment-1/src/assignment1.ipynb
+++ b/assignment-1/src/assignment1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'en_core_web_md'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/work/lang_cds_ucloud/cds-lang-assignments/assignment-1/src/assignment1.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5031154-0.cloud.sdu.dk/work/lang_cds_ucloud/cds-lang-assignments/assignment-1/src/assignment1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39men_core_web_md\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5031154-0.cloud.sdu.dk/work/lang_cds_ucloud/cds-lang-assignments/assignment-1/src/assignment1.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m nlp \u001b[39m=\u001b[39m en_core_web_md\u001b[39m.\u001b[39mload()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'en_core_web_md'"
+     ]
+    }
+   ],
+   "source": [
+    "import en_core_web_md\n",
+    "nlp = en_core_web_md.load()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import en_core_web_md\n",
-    "nlp = en_core_web_md.load()"
+    "nlp = spacy.load(\"en_core_web_md\")\n",
+    "# in terminal : python -m spacy download en_core_web_md\n"
    ]
   },
   {
