--- a/assignment-5/emmisions.ipynb
+++ b/assignment-5/emmisions.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "#out folder for all emmision trackers\n",
-    "emi_folder = os.path.join(\"..\", \"assignment-5\", \"emissions\")                        \n",
+    "emi_folder = os.path.join(\"..\", \"assignment-5\", \"out\")                        \n",
     "os.mkdir(emi_folder)                                                 \n",
     "\n",
     "#define tracker, project_name, experiment_id and output file for each script\n",
