--- a/assignment-5/src/emmisions.ipynb
+++ b/assignment-5/src/emmisions.ipynb
@@ -9,8 +9,7 @@
     "import os\n",
     "from codecarbon import EmissionsTracker\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -27,16 +26,7 @@
     "tracker = EmissionsTracker(project_name=\"x\", \n",
     "                           experiment_id=\"x\",\n",
     "                           output_dir=emi_folder,\n",
-    "                           output_file=\"x.csv\")\n",
-    "\n",
-    "#for each task start and stop tracker\n",
-    "tracker.start_task(\"x\")   \n",
-    "\n",
-    "## task \n",
-    "x = tracker.stop_task()                               \n",
-    "\n",
-    "\n",
-    "tracker.stop()"
+    "                           output_file=\"x.csv\")\n"
    ]
   }
  ],
