--- a/assignment-5/src/emmisions.ipynb
+++ b/assignment-5/src/emmisions.ipynb
@@ -1,38 +1,303 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "from codecarbon import EmissionsTracker\n",
-    "import pandas as pd\n",
-    "from tqdm.notebook import tqdm"
+    "## Evaluating Environmental Impact of Exam Portfolio "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Packages\n",
+    "Dependencies are described in the README.md file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#out folder for all emmision trackers\n",
-    "emi_folder = os.path.join(\"..\", \"assignment-5\", \"out\")                        \n",
-    "os.mkdir(emi_folder)                                                 \n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as pyplot\n",
+    "import seaborn as sns\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load in Emissions Data \n",
+    "The data is located in the ```out``` folder, and each of the .csv files ending with a run-id are loaded in to investigate the impact of the different tasks in each assignment. The individual .csv files are loaded into one dataframe, with columns containing the following information: \n",
+    "- task_name: The manually specified name of the task\n",
+    "- project_name: The manually specified name of the assignment in which the task was performed\n",
+    "- duration: The time the task took to run, in seconds\n",
+    "- emisions: The approximate emisions from this task, in CO₂-equivalents, in kg. \n",
+    "- emissions_rate: The emissions per second (kg/s)\n",
     "\n",
-    "#define tracker, project_name, experiment_id and output file for each script\n",
-    "tracker = EmissionsTracker(project_name=\"x\", \n",
-    "                           experiment_id=\"x\",\n",
-    "                           output_dir=emi_folder,\n",
-    "                           output_file=\"x.csv\")\n"
+    "As the data is extracted per task, a second dataframe will be created with the totals for each assignment. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>task_name</th>\n",
+       "      <th>project_name</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>emissions</th>\n",
+       "      <th>emissions_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Visualising features</td>\n",
+       "      <td>Assignment-1</td>\n",
+       "      <td>7.817864</td>\n",
+       "      <td>7.197657e-05</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Find artist</td>\n",
+       "      <td>Assignment-3</td>\n",
+       "      <td>0.681304</td>\n",
+       "      <td>6.283050e-06</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Load model and find words</td>\n",
+       "      <td>Assignment-3</td>\n",
+       "      <td>12.653821</td>\n",
+       "      <td>1.164590e-04</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Keyword query</td>\n",
+       "      <td>Assignment-3</td>\n",
+       "      <td>0.014269</td>\n",
+       "      <td>1.311332e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Load spacy model</td>\n",
+       "      <td>Assignment-1</td>\n",
+       "      <td>1.346084</td>\n",
+       "      <td>1.240391e-05</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Feature extraction</td>\n",
+       "      <td>Assignment-1</td>\n",
+       "      <td>187.111034</td>\n",
+       "      <td>1.722601e-03</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Load model</td>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>21.219158</td>\n",
+       "      <td>1.953576e-04</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Load data</td>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>0.250360</td>\n",
+       "      <td>2.298704e-06</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Emotion classification</td>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>5182.650649</td>\n",
+       "      <td>4.771336e-02</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Reshape data</td>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>0.069852</td>\n",
+       "      <td>6.388758e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plot emotions</td>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>3.841459</td>\n",
+       "      <td>3.535423e-05</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   task_name  project_name     duration     emissions  \\\n",
+       "0       Visualising features  Assignment-1     7.817864  7.197657e-05   \n",
+       "0                Find artist  Assignment-3     0.681304  6.283050e-06   \n",
+       "1  Load model and find words  Assignment-3    12.653821  1.164590e-04   \n",
+       "2              Keyword query  Assignment-3     0.014269  1.311332e-07   \n",
+       "0           Load spacy model  Assignment-1     1.346084  1.240391e-05   \n",
+       "1         Feature extraction  Assignment-1   187.111034  1.722601e-03   \n",
+       "0                 Load model  Assignment-4    21.219158  1.953576e-04   \n",
+       "1                  Load data  Assignment-4     0.250360  2.298704e-06   \n",
+       "2     Emotion classification  Assignment-4  5182.650649  4.771336e-02   \n",
+       "3               Reshape data  Assignment-4     0.069852  6.388758e-07   \n",
+       "4              Plot emotions  Assignment-4     3.841459  3.535423e-05   \n",
+       "\n",
+       "   emissions_rate  \n",
+       "0        0.000009  \n",
+       "0        0.000009  \n",
+       "1        0.000009  \n",
+       "2        0.000009  \n",
+       "0        0.000009  \n",
+       "1        0.000009  \n",
+       "0        0.000009  \n",
+       "1        0.000009  \n",
+       "2        0.000009  \n",
+       "3        0.000009  \n",
+       "4        0.000009  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emissions = pd.DataFrame()\n",
+    "for file in sorted(glob.glob(os.path.join(\"../out/\", \"emissions_*\"))):\n",
+    "    emissions = pd.concat([emissions, pd.read_csv(file, usecols=[0,2,4,5,6])])\n",
+    "emissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>project_name</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>emissions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Assignment-1</td>\n",
+       "      <td>196.274982</td>\n",
+       "      <td>0.001807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Assignment-3</td>\n",
+       "      <td>13.349394</td>\n",
+       "      <td>0.000123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Assignment-4</td>\n",
+       "      <td>5208.031479</td>\n",
+       "      <td>0.047947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   project_name     duration  emissions\n",
+       "0  Assignment-1   196.274982   0.001807\n",
+       "1  Assignment-3    13.349394   0.000123\n",
+       "2  Assignment-4  5208.031479   0.047947"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emissions_total = emissions[[\"project_name\", \"duration\", \"emissions\"]].groupby([\"project_name\"]).sum().reset_index()\n",
+    "emissions_total"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
