--- a/assignment-2/gridsearch.ipynb
+++ b/assignment-2/gridsearch.ipynb
@@ -32,7 +32,14 @@
     "'lbfgs' is robust and the default solver when using ```scikit-learn``` LogisticRegression. Additionally, 'saga' and 'liblinear' are included in the tuning. 'liblinear' is recommended on smaller datasets, which the *Fake or Real News* dataset is, and 'saga' is overall well performing. \n",
     "\n",
     "- penalties = [\"l1\", \"l2\"]\n",
-    "\n"
+    "\n",
+    "*consider whether lbfgs should be included? it does not support l1 penalty*\n",
+    "\n",
+    "The penalties represent different regularization techinques, which helps balance between model fit and complexity. Not all solvers support all penalties, in this case 'l1' and 'l2' penalties have been included in the gridsearch. \n",
+    "\n",
+    "- C = [1.0, 0.1, 0.01]\n",
+    "\n",
+    "The C hyperparameter defines the strength of the regulrazation on the model, the smaller the value the more regulration and the simpler the model, in turn a higher value slacks the regularization and allows for a more complex model. The default is 1.0, and 0.1 and 0.01 has also been included as paramaters in the grid search. "
    ]
   },
   {
