--- a/assignment-2/gridsearch.ipynb
+++ b/assignment-2/gridsearch.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +62,13 @@
        "(1267, 500)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test.shape"
+    "X_test.shape\n"
    ]
   },
   {
