--- a/assignment-2/src/test.ipynb
+++ b/assignment-2/src/test.ipynb
@@ -468,22 +468,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_MLP_training(outpath, score):    \n",
-    "    \"\"\" Plot training loss and validation accuracy and save to out folder \"\"\"\n",
-    "    MLP = load(f\"models/MLP_{score}.joblib\")\n",
-    "    plt.figure(figsize = (12,6))\n",
-    "    plt.title(\"Training Plot for MLP Classifier\")\n",
-    "    plt.subplot(1,2,1)\n",
-    "    plt.plot(MLP.loss_curve_)\n",
-    "    plt.title(\"Loss Curve\")\n",
-    "    plt.xlabel(\"Iterations\")\n",
-    "    plt.ylabel(\"loss\")\n",
-    "    plt.subplot(1,2,2)\n",
-    "    plt.plot(MLP.validation_scores_)\n",
-    "    plt.title(\"Validation Accuracy\")\n",
-    "    plt.xlabel(\"Iterations\")\n",
-    "    plt.ylabel(\"accuracy\")\n",
-    "    plt.savefig(outpath)"
+    "\n",
+    "##optional gridsearch\n",
+    "def MLP_fit(X_train_features, y_train, score, gridsearch, tracker):\n",
+    "    \"\"\"\n",
+    "    The function fits the vectorised training data, to the parameters defined in grid_params, ans saves the best\n",
+    "    performing model in the 'out' folder. \n",
+    "    \"\"\"\n",
+    "    if gridsearch == \"%GS\":\n",
+    "        tracker.start_task(\"Fit MLP model\")\n",
+    "\n",
+    "        MLP = MLPClassifier(solver = \"adam\",\n",
+    "                            early_stopping = True,\n",
+    "                            max_iter=1000, \n",
+    "                            random_state = 42, \n",
+    "                            verbose = True).fit(X_train_features, y_train)\n",
+    "        tracker.stop_task()\n",
+    "    elif gridsearch == \"GS\":\n",
+    "        tracker.start_task(\"Fit MLP model with GS\")\n",
+    "        grid = grid_params(score)\n",
+    "        grid = grid.fit(X_train_features, y_train)\n",
+    "        MLP = grid.best_estimator_[\"MLP\"]\n",
+    "        tracker.stop_task()\n",
+    "    dump(MLP, f\"models/MLP_{score}.joblib\")\n"
    ]
   }
  ],
